sugar/tests/success/ignore.mx
mk1 : ! 1, e : _|_
|- ignore mk1 in e
