sugar/tests/fail/bang2.mx
a : 1, u : _|_ |-
ignore a in u
